sass/style.scss
/* ... */
/*
====================================
END: LATEST MEDIA COVERAGE
====================================
*/


/*
==================================
ABOUT US
====================================
*/

.top-content-section {
	display: flex;
	justify-content:space-between;
	align-items:center;
	margin: 50px 0;

	@include breakpoint(tabletsmallest) {
		margin: 30px 0;
		flex-direction:column;
	}
	.image-wrapper {
		font-size: 0;
		margin: 0 50px 0 0;
		width: 30%;

		@include breakpoint(tabletsmallest) {
			margin: 0 auto 30px;
			width: 70%;
		}
	}

	p {
		max-width: 70%;
	}
}

// ABOUT US HERO SPECIFIC Styling
.page-id-371 .hero strong {
	font-size: 2.8rem;
}

.text-section {
	background: #F4F3F2;
	padding:50px 0;
	@include breakpoint("560") {
		padding: 30px 0;
	}
}
.image-section {
	padding:50px 0;
	text-align: center;
	@include breakpoint("560") {
		padding: 30px 0;
	}
	p {
		width:80%;
		margin: 20px auto 0;
		font-size: 14px;
		@include breakpoint(tabletsmallest) {
			width:100%;
		}
	}
}
/*
====================================
END: ABOUT US
====================================
*/



/*
==================================
LOGIN
====================================
*/

.main.login {
	background: #F4F3F2;
	padding: 50px 0;
}

// Registration form.
.registration-form {
	background: white;
	box-shadow: 0px 0px 15px lightgrey;
	margin: 10% auto;
	padding: 6% 3%;
	width: 60%;

	@include breakpoint(standard) {
		width:80%;
	}
	@include breakpoint(tabletsmallest) {
		width:100%;
	}

	.gform_wrapper label.gfield_label {
		font-size: 16px;
	}

	// Page 1.
	#gform_page_1_1 {

		ul li:not(:first-of-type) {
			line-height: 3;
		}

		#field_1_25 li {
			line-height: 1.2;
		}

		.gfield_description {
			line-height: 1.2;
		}

		// Password.
		#field_1_14 {
			margin: 10px 0 0;

			input {
				width: 70%;
			}
		}
	} // #gform_page_1_1

	// Page 2.
	#gform_page_1_2 {

		a {
			font-size: 18px;
		}

		.gfield_label {
			line-height: 2.4;
		}

		// Name.
		#field_1_14 {
			margin: 10px 0 0;

			label {
				line-height: 2.7;
				margin-top: 11px;
				width: 28%;
			}
		}

		.field_sublabel_below .ginput_complex.ginput_container label {
			margin: 0!important;
		}

		#input_1_14_3_container,
		#input_1_14_6_container {
			label {
				line-height: 1.2;
			}
		}

		ul {
			text-align: right;
		}

		#field_1_21,
		#field_1_23 {

			label {
				font-size: 14px;
				line-height: 1.2!important;
				margin: 14px 0;
			}
		}

		ul.gform_fields:not(.top_label) .gfield_label {
			width: 48%;
		}

		.left_label select.large,
		.left_label input.large {
			width: 50%;
		}

		ul.gform_fields li.gfield {
			padding-right: 0;
		}
	} // #gform_page_1_2

	#field_1_25 {
		margin: 30px 0!important;
		width:100%;
	}

	.gform_wrapper ul.gform_fields:not(.top_label) .gfield_label {
		margin-bottom: 0;
	}

	.widgettitle, h3.gform_title {
		color:#464646;
		font-size: 42px!important;
	}
	label {
		text-align: right;
		text-transform: uppercase;
	}
	select, input {
		background: white;
		border-radius:3px;
		border:1px solid lightgrey;
		height:40px;
	}
	input {
		margin: 10px 0;
	}
	.gform_wrapper .field_description_below .gfield_description {
		padding-top: 0!important;
	}

	// Terms + Conditions checkbox.
	.gform_wrapper .gfield_checkbox li input[type=checkbox] {
		height: inherit;
		vertical-align: top;
	}

	.gform_wrapper form ul.left_label li ul.gfield_checkbox li {
		margin-top: 5px;
	}

	.gform_page_footer {
		display:flex;
		justify-content: flex-end;
	}
}

// Login.
#gform_login_widget-2 {
	background: white;
	box-shadow: 0px 0px 15px lightgrey;
	margin: 10% auto;
	padding:6% 5%;
	width: 550px;
	@include breakpoint("560"){
		width:100%;
	}
	a {
		text-align: center;
		display:block;
	}
	.widgettitle, h3.gform_title {
		font-size: 42px!important;
		color:#464646;
	}

	.gform_wrapper ul.gform_fields li.gfield {
		padding-right: 0!important;
	}

	input[type=text], input[type=email], input[type=password] {
		border: 1px solid lightgrey;
		border-radius: 3px;
		height:50px;
		width:100%;
		padding-left: 12px!important;
	}

	input[type=submit], input[type=button], input[type=password] {
		width:100%!important;
		height:50px;
	}
	 input[type=submit], input[type=button] {
		width:100%!important;
		height:50px;
	}
	nav a{
		text-align: left;
		font-size: 16px;
	}
}

#gform_login_widget-2 li {
	display:flex;
	align-items:center;
	justify-content: space-between;
	label {
		margin-bottom: 0;
		text-align: right;
		text-transform: uppercase;
		font-size: 14px;
	}
	.ginput_container{
		width:80%;
		select, input {
			height:50px;
			width:100%;
		}
	}
}

.gform_wrapper .gfield_description.validation_message {
	width:70%;
	a {
		text-align: left!important;
	}
}

#gform_login_widget-2 #field_3 {
	justify-content: flex-start;

	.ginput_container_checkbox {
		width: inherit;

		input {
			height: inherit;
			margin-top: 0;
		}
	}
	label {
		text-align: left;
	}
}
/*
====================================
END: LOGIN
====================================
*/

.resources {
	padding-left: 0;

	.resources-feat-img {
		float: right;
		@include breakpoint(tabletsmallest) {
			float: none;
		}
		img {
			height: auto;
			width: 550px;
		}
	}

	.resource {
		list-style: none;
		margin-bottom: 50px;
		a {
			font-size: 2.8rem;
			color:#333;
			font-weight: 700;
			@include word-wrap();
			display:block;
			&:hover {
				text-decoration: underline;
			}
			@include breakpoint("560") {
				font-size: 2.4rem;
			}
			@include breakpoint(phonesmall) {
				font-size: 2.2rem;
			}
		}
		p:last-child {
			font-size: 2rem;
		}
		p:first-child {
			color: #A3A3A3;
			font-weight: 600;
			margin-bottom: 0;
		}
	}
}
/* ... */

